tests/negative/gold/export_cyclic6_test.gold
tests/negative/export_cyclic6_b.toit:4:1: error: Cyclic export dependency
export *
^~~~~~
tests/negative/export_cyclic6_c.toit:4:1: note: This clause contributes to the 'export' cycle
export *
^~~~~~
tests/negative/export_cyclic6_d.toit:4:1: note: This clause contributes to the 'export' cycle
export *
^~~~~~
tests/negative/export_cyclic6_c.toit:4:1: error: Cyclic export dependency
export *
^~~~~~
tests/negative/export_cyclic6_b.toit:4:1: note: This clause contributes to the 'export' cycle
export *
^~~~~~
tests/negative/export_cyclic6_d.toit:4:1: note: This clause contributes to the 'export' cycle
export *
^~~~~~
tests/negative/export_cyclic6_d.toit:4:1: error: Cyclic export dependency
export *
^~~~~~
tests/negative/export_cyclic6_b.toit:4:1: note: This clause contributes to the 'export' cycle
export *
^~~~~~
tests/negative/export_cyclic6_c.toit:4:1: note: This clause contributes to the 'export' cycle
export *
^~~~~~
Compilation failed.
